<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/lightIndigo"
    tools:context=".AdvancedSearchMenuActivity">


    <TextView android:id="@+id/advancedSearchLabel"
        android:text="@string/advancedSearchLabel"
        style="@style/bigLabelText"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/searchByNameButton"
            android:text="@string/searchByName"
            style="@style/mainMenuStyle"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/searchByClassButton"
            android:text="@string/searchByClass"
            style="@style/mainMenuStyle"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/searchByTypeButton"
            android:text="@string/searchByType"
            style="@style/mainMenuStyle"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_weight="2"
        android:layout_width="wrap_content"
        android:layout_height="0dp">

        <Button android:id="@+id/backToMainMemuButton"
            style="@style/mainMenuButtonStyle"
            android:layout_gravity="bottom"
            android:text="@string/backToMainMenu"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>