<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightIndigo"
    tools:context="com.example.valverde.hearthstonecardsapp.MainActivity">

    <View android:layout_weight="2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

    <LinearLayout
        android:layout_weight="8"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button android:id="@+id/allCardsButton"
            style="@style/mainMenuStyle"
            android:text="@string/allCardsButton"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/myFavoriteCardsButton"
            style="@style/mainMenuStyle"
            android:text="@string/myFavoriteButtun"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/advancedSearchButton"
            style="@style/mainMenuStyle"
            android:text="@string/customOptionsButton"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
