<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightIndigo"
    tools:context="com.example.valverde.hearthstonecardsapp.SpecificAdvancedSearchActivity">

    <TextView android:id="@+id/advancedSpecificSearchLabel"
        android:text="@string/advancedSearchLabel"
        style="@style/bigLabelText"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/specificSearchTextView"
            style="@style/labelText"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/specificSearchEditText"
            style="@style/labelText"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Spinner android:id="@+id/specificSearchSpinner"
            style="@style/labelText"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/backToMainMemuButton"
            android:text="@string/backToMainMenu"
            style="@style/mainMenuButtonStyle"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/advancedSearchButton"
            android:text="@string/advancedSearchButton"
            style="@style/mainMenuButtonStyle"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
